Added new method to display ebooks.

--- a/Source/EbookShop.Web/appsettings.json
+++ b/Source/EbookShop.Web/appsettings.json
@@ -8,8 +8,8 @@
     },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-        "LocalDb": "Data Source=localhost\\SQLExpress;Initial Catalog=EbookShopDb;Integrated Security=True;Pooling=False"
-    }, //tutaj trzeba ustawiæ prawid³owy odnoœnik do bazy
+    "LocalDb": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=EbookShopDb;Integrated Security=True"
+  }, //tutaj trzeba ustawiæ prawid³owy odnoœnik do bazy
   "JwtIssuerOptions": {
     "Issuer": "sso.domain",
     "Audience": "app.domain"
